adapt Lists -> ArraysList to compatible with java 8